Mejoras al layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
               lines="none"
               detail="false"
               routerLinkActive="selected"
+              [routerLinkActiveOptions]="{ exact: true }"
             >
               <ion-icon
                 slot="start"
