--- a/src/app/ideas/ideas.page.html
+++ b/src/app/ideas/ideas.page.html
@@ -1,29 +1,53 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border" [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Ideas</ion-title>
+    <ion-searchbar
+      class="ion-margin-top"
+      color="light"
+      placeholder="Find an idea"
+      mode="ios"
+    >
+    </ion-searchbar>
+    <ion-button color="light" slot="end">
+      <ion-icon name="filter-sharp" class="ion-padding"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div class="container">
-    <ion-card class="idea-card">
+  <ion-card
+    class="idea-card ion-activatable"
+    *ngFor="let idea of ideas"
+    [style.background]="'url('+ idea.image +')'"
+    [style.background-size]="'cover'"
+  >
+    <div class="tags">
+      <ion-badge color="tertiary">My idea</ion-badge>
+      <ion-badge color="warning">New</ion-badge>
+      <ion-badge color="danger">Featured</ion-badge>
+    </div>
+    <div class="options">
+      <ion-button size="large" class="option-button" shape="round">
+        <ion-icon color="light" name="ellipsis-vertical-sharp"></ion-icon>
+      </ion-button>
+    </div>
+    <div class="summary">
       <ion-text color="light">
-        <h2 class="title">Crear aplicación de ideas!</h2>
+        <h2 class="title">{{idea.title}}</h2>
       </ion-text>
-    </ion-card>
-  </div>
+      <ion-ripple-effect type="bounded"></ion-ripple-effect>
+    </div>
+  </ion-card>
 
-  <!-- FAB Go To Create Idea -->
   <ion-fab
     class="create-idea-button"
     vertical="bottom"
     horizontal="end"
     slot="fixed"
   >
-    <ion-fab-button color="light" (click)="goToCreateIdea()">
+    <ion-fab-button color="success" (click)="goToCreateIdea()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
