Stream 08/12 Create Ideas Form

--- a/src/app/create-idea/create-idea.page.html
+++ b/src/app/create-idea/create-idea.page.html
@@ -1,29 +1,33 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border" [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Give idea</ion-title>
+    <ion-text>
+      <h2>Giving an idea</h2>
+    </ion-text>
+    <ion-button
+      color="light"
+      slot="end"
+      shape="round"
+      (click)="form.valid && onSubmit()"
+      [disabled]="!form.valid"
+    >
+      <ion-icon slot="start" name="add-sharp"></ion-icon>
+      Create
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Ideas...</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong class="capitalize">Create form</strong>
-    <p>
-      Explore
-      <a
-        target="_blank"
-        rel="noopener noreferrer"
-        href="https://ionicframework.com/docs/components"
-        >UI Components</a
-      >
-    </p>
-  </div>
+  <form [formGroup]="form" class="form">
+    <ion-input formControlName="title" placeholder="Title"></ion-input>
+    <label>
+      <ion-textarea
+        autoGrow="true"
+        formControlName="description"
+        placeholder="Write something awesome..."
+      ></ion-textarea>
+    </label>
+  </form>
 </ion-content>
