Stream 09/12: mejorando el formulario de crear idea

--- a/src/app/create-idea/create-idea.page.html
+++ b/src/app/create-idea/create-idea.page.html
@@ -6,13 +6,7 @@
     <ion-text>
       <h2>Giving an idea</h2>
     </ion-text>
-    <ion-button
-      color="light"
-      slot="end"
-      shape="round"
-      (click)="form.valid && onSubmit()"
-      [disabled]="!form.valid"
-    >
+    <ion-button color="light" slot="end" shape="round" (click)="form.valid && onSubmit()" [disabled]="!form.valid">
       <ion-icon slot="start" name="add-sharp"></ion-icon>
       Create
     </ion-button>
@@ -21,13 +15,20 @@
 
 <ion-content [fullscreen]="true">
   <form [formGroup]="form" class="form">
-    <ion-input formControlName="title" placeholder="Title"></ion-input>
-    <label>
-      <ion-textarea
-        autoGrow="true"
-        formControlName="description"
-        placeholder="Write something awesome..."
-      ></ion-textarea>
+    <label class="title">
+      <ion-item>
+        <ion-label slot="end" color="dark" [style.color]="titleLength > 25 ? 'red' : 'rgb(165, 164, 164)'">{{
+          titleLength }} / 25
+        </ion-label>
+        <ion-input formControlName="title" placeholder="Title"></ion-input>
+      </ion-item>
+    </label>
+    <label class="description">
+      <span class="description-length" [style.color]="descriptionLength > 999 ? 'red' : 'rgb(165, 164, 164)'">
+        {{ descriptionLength }} / 999
+      </span>
+      <ion-textarea autoGrow="true" formControlName="description" placeholder="Write something awesome...">
+      </ion-textarea>
     </label>
   </form>
 </ion-content>
