--- a/src/app/create-idea/create-idea.page.scss
+++ b/src/app/create-idea/create-idea.page.scss
@@ -9,16 +9,28 @@ h2 {
   padding: 16px;
   height: 100%;
 
-  ion-input {
+  .title {
     flex: none;
     border-bottom: 1px solid rgb(165, 164, 164);
     margin-bottom: 10px;
+
+    --ion-color-dark: rgb(165, 164, 164);
   }
 
-  ion-textarea {
-    overflow: scroll;
-  }
-  label {
+  .description {
     flex-grow: 1;
+
+    .description-length {
+      position: absolute;
+      right: 16px;
+      padding: 0.5em;
+      z-index: 10;
+    }
+
+    ion-textarea {
+      overflow: scroll;
+      z-index: 5;
+      padding-top: 1.3em;
+    }
   }
 }
