--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,42 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
-      <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>twitch.tv/rusgunx</ion-list-header>
-          <ion-note>ruslanguns@gmail.com</ion-note>
+    <ng-container>
+      <ion-menu contentId="main-content" type="overlay">
+        <ion-content>
+          <ion-list id="inbox-list">
+            <ion-list-header>twitch.tv/rusgunx</ion-list-header>
+            <ion-note>ruslanguns@gmail.com</ion-note>
 
-          <ion-menu-toggle
-            auto-hide="false"
-            *ngFor="let p of appPages; let i = index"
-          >
-            <ion-item
-              routerDirection="root"
-              [routerLink]="[p.url]"
-              lines="none"
-              detail="false"
-              routerLinkActive="selected"
-              [routerLinkActiveOptions]="{ exact: true }"
-            >
-              <ion-icon
-                slot="start"
-                [ios]="p.icon + '-outline'"
-                [md]="p.icon + '-sharp'"
-              ></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
+            <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
+              <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false"
+                routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }">
+                <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+                <ion-label>{{ p.title }}</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+
+            <ng-container *ngIf="user$ | async as user; else NoUserLogin">
+              <ion-menu-toggle auto-hide="false">
+                <ion-item button (click)="logout()" class="cursor-pointer" lines="none" detail="false">
+                  <ion-icon slot="start" ios="log-out-outline" md="log-out-sharp"></ion-icon>
+                  <ion-label>Logout</ion-label>
+                </ion-item>
+              </ion-menu-toggle>
+            </ng-container>
+
+            <ng-template #NoUserLogin>
+              <ion-menu-toggle auto-hide="false">
+                <ion-item button (click)="login()" class="cursor-pointer" lines="none" detail="false">
+                  <ion-icon slot="start" ios="log-out-outline" md="log-in-sharp"></ion-icon>
+                  <ion-label>Sign in</ion-label>
+                </ion-item>
+              </ion-menu-toggle>
+            </ng-template>
+
+          </ion-list>
+        </ion-content>
+      </ion-menu>
+    </ng-container>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
