--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,11 @@
+<ion-header class="ion-no-border" [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Login</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-card class="auth-form">
   <ion-card-header>
     <ion-card-title>Sign in</ion-card-title>
@@ -16,17 +24,6 @@
       </ion-item>
 
       <ion-button type="submit" expand="block" (click)="onSubmit()" [disabled]="!form.valid">Sign in</ion-button>
-
-      <ng-container *ngIf="user$ | async as user">
-        <ion-item>
-          <ion-text>
-            <p>{{ user | json }}</p>
-          </ion-text>
-        </ion-item>
-        <ion-button (click)="logout()" color="warning">
-          Logout
-        </ion-button>
-      </ng-container>
     </form>
 
     <ion-text class="extra-options">
