--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,3 +1,55 @@
-<p>
-  register works!
-</p>
+<ion-header class="ion-no-border" [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Registration form</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-card class="auth-form">
+  <ion-card-header>
+    <ion-card-title>Sign up</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <ion-item>
+        <ion-label position="floating">E-mail</ion-label>
+        <ion-input formControlName="email"></ion-input>
+      </ion-item>
+
+      <ion-item *ngIf="email.invalid && email.touched" lines="none">
+        <ion-text color="danger" class="form-error">
+          Please enter a valid email address.
+        </ion-text>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Password</ion-label>
+        <ion-input type="password" formControlName="password"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="password.invalid && password.touched" lines="none">
+        <ion-text color="danger" class="form-error">
+          Password is required.
+        </ion-text>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Confirm password</ion-label>
+        <ion-input type="password" formControlName="confirmPassword"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="form.hasError('notEqual') && confirmPassword.touched" lines="none">
+        <ion-text color="danger" class="form-error">
+          Passwords does not match.
+        </ion-text>
+      </ion-item>
+
+      <ion-button type="submit" expand="block">Sign up</ion-button>
+    </form>
+
+    <ion-text class="extra-options">
+      Already have an account yet?
+      <a [routerLink]="['/auth/login']">Sign in</a>
+    </ion-text>
+  </ion-card-content>
+</ion-card>
