--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,3 +1,35 @@
-<p>
-  forgot-password works!
-</p>
+<ion-header class="ion-no-border" [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Password recovery page</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-card class="auth-form">
+  <ion-card-header>
+    <ion-card-title>Recover password</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <ion-item>
+        <ion-label position="floating">E-mail</ion-label>
+        <ion-input formControlName="email"></ion-input>
+      </ion-item>
+
+      <ion-item *ngIf="email.invalid && email.touched" lines="none">
+        <ion-text color="danger" class="form-error">
+          Please enter a valid email address.
+        </ion-text>
+      </ion-item>
+
+      <ion-button type="submit" expand="block">Send password recovery email</ion-button>
+    </form>
+
+    <ion-text class="extra-options">
+      Already have an account yet?
+      <a [routerLink]="['/auth/login']">Sign in</a>
+    </ion-text>
+  </ion-card-content>
+</ion-card>
