--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -24,7 +24,9 @@
         </ion-text>
       </ion-item>
 
-      <ion-button type="submit" expand="block">Send password recovery email</ion-button>
+      <ion-button type="submit" expand="block" [disabled]="loading || !form.valid">
+        {{ loading ? 'Loading...':'Send password recovery email'}}
+      </ion-button>
     </form>
 
     <ion-text class="extra-options">
