--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -33,7 +33,9 @@
         </ion-text>
       </ion-item>
 
-      <ion-button type="submit" expand="block">Create password</ion-button>
+      <ion-button type="submit" expand="block" [disabled]="loading || !form.valid">
+        {{loading ? 'Loading' : 'Create password'}}
+      </ion-button>
     </form>
 
     <ion-text class="extra-options">
