--- a/src/app/create-idea/create-idea.page.scss
+++ b/src/app/create-idea/create-idea.page.scss
@@ -28,7 +28,7 @@ h2 {
     }
 
     ion-textarea {
-      overflow: scroll;
+      overflow: hidden;
       z-index: 5;
       padding-top: 1.3em;
     }
