Detalles idea, avances stream 29/12/2021

--- a/src/app/ideas/ideas.page.html
+++ b/src/app/ideas/ideas.page.html
@@ -3,7 +3,12 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-searchbar class="ion-margin-top" color="light" placeholder="Find an idea" mode="ios">
+    <ion-searchbar
+      class="ion-margin-top"
+      color="light"
+      placeholder="Find an idea"
+      mode="ios"
+    >
     </ion-searchbar>
     <ion-button color="light" slot="end">
       <ion-icon name="filter-sharp" class="ion-padding"></ion-icon>
@@ -12,17 +17,22 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
   <ng-container *ngIf="ideas$ | async as ideas">
-    <ion-card class="idea-card ion-activatable" *ngFor="let idea of ideas" [style.background]="'url('+ idea.cover +')'"
-      [style.background-size]="'cover'">
-      <ng-container *ngIf="idea.tags?.length">
+    <ion-card
+      [routerLink]="['/idea', idea.id ]"
+      routerLinkActive="router-link-active"
+      class="idea-card ion-activatable"
+      *ngFor="let idea of ideas"
+      [style.background]="'url('+ idea.cover +')'"
+      [style.background-size]="'cover'"
+    >
+      <!-- <ng-container *ngIf="idea.tags?.length">
         <div class="tags">
           <ion-badge *ngFor="let tag of idea.tags" [color]="ideaTags[tag].color">
             {{ideaTags[tag].content}}
           </ion-badge>
         </div>
-      </ng-container>
+      </ng-container> -->
       <div class="options">
         <ion-button size="large" class="option-button" shape="round">
           <ion-icon color="light" name="ellipsis-vertical-sharp"></ion-icon>
@@ -38,7 +48,12 @@
   </ng-container>
 
   <ng-container *ngIf="user$ | async as user; else NoUserLogin">
-    <ion-fab class="create-idea-button" vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab
+      class="create-idea-button"
+      vertical="bottom"
+      horizontal="end"
+      slot="fixed"
+    >
       <ion-fab-button color="success" (click)="goToCreateIdea()">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
@@ -46,7 +61,12 @@
   </ng-container>
 
   <ng-template #NoUserLogin>
-    <ion-fab class="create-idea-button" vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab
+      class="create-idea-button"
+      vertical="bottom"
+      horizontal="end"
+      slot="fixed"
+    >
       <ion-fab-button color="success" (click)="goToLogin()">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
