--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -63,12 +63,12 @@
   --ion-color-dark-tint: #383a3e;
 
   /** medium **/
-  --ion-color-medium: #92949c;
+  --ion-color-medium: #767881;
   --ion-color-medium-rgb: 146, 148, 156;
   --ion-color-medium-contrast: #ffffff;
   --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: #808289;
-  --ion-color-medium-tint: #9d9fa6;
+  --ion-color-medium-shade: #6d7079;
+  --ion-color-medium-tint: #868994;
 
   /** light **/
   --ion-color-light: #f4f5f8;
